# dx12-scratch

./: .gitignore  README.md
examples/: something.rs
winapi-rs/: Cargo.toml
winapi-rs/src/: main.rs  simple.hlsl
windows-rs/: Cargo.toml
windows-rs/bindings/: build.rs
windows-rs/src/: main.rs
