[package]
name = "dx12-scratch"
version = "0.1.0"
authors = ["Jari Pennanen <ciantic@oksidi.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wio = "*"

[dependencies.winapi]
version = "0.3"
features = ["dxgi1_2","dxgi1_3","dxgi1_4","dxgidebug","d3d12","d3d12sdklayers","d3dcommon","d3dcompiler","dxgiformat","dcomp","synchapi","winerror",

	# For window creation
	"winuser","minwindef","windef"]